@@ -1,3 +1,12 @@
+- __get_default_file() now dynamically fills in file handles for the
+  stdin/stdout/stderr streams if it's part of the thread-safe library.
+
+- fpathconf() now checks if the file descriptor is really referring to a file.
+
+- The termios hook entry code could file descriptor's embedded file handle
+  rather than what the thread safe library had dynamically bound to the
+  stdin/stdout/stderr streams.
+
 - execve() now finds commands in the current directory again, even if you
   omit the leading "./" path name.
 
